--- a/src/app/components/tabla-servicios/tabla-servicios.component.html
+++ b/src/app/components/tabla-servicios/tabla-servicios.component.html
@@ -1,4 +1,15 @@
-<body>
+
+
+       
+    <header class="header">
+        <button (click)="logout()" type="button" class="logout-btn">
+          Cerrar sesión
+        </button>
+      </header>
+      
+ 
+      <body>
+ 
     <!-- Contenido principal -->
     <div class="main-content">
         <h1>Bienvenido, Tutor</h1>
@@ -32,7 +43,7 @@
                             <th>Cedula</th>
                             <th>Telefono</th>
                             <th>Nivel</th>
-                            <th>Imagen</th>
+                         
                             <th class="actions">Acciones</th>
                         </tr>
                     </thead>
@@ -46,7 +57,7 @@
                                 <td>{{ estudiante.cedula }}</td>
                                 <td>{{ estudiante.telefono }}</td>
                                 <td>{{ estudiante.nivel }}</td>
-                                <td><img src="{{ estudiante.imagen }}" alt="Imagen del Usuario"></td>
+                           
                                 <td class="actions">
                                     <button (click)="eliminar(estudiante.id)" class="btn-eliminar">
                                         Eliminar
@@ -60,11 +71,7 @@
         </div>
         
     </div>        
-    <header>
-        <button (click)="logout()" type="button" class="logout-btn">
-          Cerrar sesión
-        </button>
-      </header>
+   
 </body>
 
 <footer>
